@@ -17,8 +17,6 @@
 
 package org.openqa.selenium.virtualauthenticator;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import org.jspecify.annotations.NullMarked;
 
@@ -95,13 +93,12 @@ public class VirtualAuthenticatorOptions {
   }
 
   public Map<String, Object> toMap() {
-    Map<String, Object> map = new HashMap<>();
-    map.put("protocol", protocol.id);
-    map.put("transport", transport.id);
-    map.put("hasResidentKey", hasResidentKey);
-    map.put("hasUserVerification", hasUserVerification);
-    map.put("isUserConsenting", isUserConsenting);
-    map.put("isUserVerified", isUserVerified);
-    return Collections.unmodifiableMap(map);
+    return Map.ofEntries(
+        Map.entry("protocol", protocol.id),
+        Map.entry("transport", transport.id),
+        Map.entry("hasResidentKey", hasResidentKey),
+        Map.entry("hasUserVerification", hasUserVerification),
+        Map.entry("isUserConsenting", isUserConsenting),
+        Map.entry("isUserVerified", isUserVerified));
   }
 }
